--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,81 @@
 .idea
+backend/*#
+backend/*.iml
+backend/*.ipr
+backend/*.iws
+backend/*.jar
+backend/*.sw?
+backend/*~
+backend/.#*
+backend/.*.md.html
+backend/.DS_Store
+backend/.attach_pid*
+backend/.classpath
+backend/.factorypath
+backend/.gradle
 backend/.idea
+backend/.metadata
+backend/.project
+backend/.recommenders
+backend/.settings
+backend/.springBeans
+backend/.vscode
+backend/code
+backend/MANIFEST.MF
+backend/_site/
+backend/activemq-data
+backend/bin
+backend/build
+backend/!/**/src/**/bin
+backend/!/**/src/**/build
+backend/build.log
+backend/dependency-reduced-pom.xml
+backend/dump.rdb
+backend/interpolated*.xml
+backend/lib/
+backend/manifest.yml
+backend/out
+backend/overridedb.*
+backend/target
+backend/.flattened-pom.xml
+backend/secrets.yml
+backend/.gradletasknamecache
+backend/.sts4-cache
+
+frontend/.DS_STORE
+frontend/node_modules
+frontend/scripts/flow/*/.flowconfig
+frontend/.flowconfig
+frontend/*~
+frontend/*.pyc
+frontend/.grunt
+frontend/_SpecRunner.html
+frontend/__benchmarks__
+frontend/build/
+frontend/remote-repo/
+frontend/coverage/
+frontend/.module-cache
+frontend/fixtures/dom/public/react-dom.js
+frontend/fixtures/dom/public/react.js
+frontend/test/the-files-to-test.generated.js
+frontend/*.log*
+frontend/chrome-user-data
+frontend/*.sublime-project
+frontend/*.sublime-workspace
+frontend/.idea
+frontend/*.iml
+frontend/.vscode
+frontend/*.swp
+frontend/*.swo
+frontend/packages/react-devtools-core/dist
+frontend/packages/react-devtools-extensions/chrome/build
+frontend/packages/react-devtools-extensions/chrome/*.crx
+frontend/packages/react-devtools-extensions/chrome/*.pem
+frontend/packages/react-devtools-extensions/firefox/build
+frontend/packages/react-devtools-extensions/firefox/*.xpi
+frontend/packages/react-devtools-extensions/firefox/*.pem
+frontend/packages/react-devtools-extensions/shared/build
+frontend/packages/react-devtools-extensions/.tempUserDataDir
+frontend/packages/react-devtools-inline/dist
+frontend/packages/react-devtools-shell/dist
+frontend/packages/react-devtools-scheduling-profiler/dist
